Added swagger for /locations
